[package]
name = "hadron-launcher"
version = "0.1.1"
edition = "2024"
description = "A simple game launcher for Linux to manage and launch games using Proton."
authors = ["Asadul Al Galib <asadulgalibvat69@gmail.com>"]
license = "Unlicense"
repository = "https://github.com/galib45/hadron-launcher"

[dependencies]
dirs = "6.0.0"
iced = { version = "0.14.0", features = ["image", "advanced", "svg"] }
iced_dialog = "0.14.0"
rfd = "0.16.0"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.10"
